--- a/src/components/MenuNav/MenuNav.scss
+++ b/src/components/MenuNav/MenuNav.scss
@@ -3,7 +3,7 @@
 .menu-nav {
 	position: sticky;
 	top: 5rem;
-	z-index: 3;
+	z-index: 2;
 	width: 100%;
 	margin-top: 1rem;
 	padding: 0.2rem;
